Ejemplo de cambio grep.html

--- a/grep.html
+++ b/grep.html
@@ -39,6 +39,8 @@
                                                       "Patrón", "patrón" o "PAtRóN", todas serán consideradas como coincidencias.
 
                     (ejemplo de uso del comando con y sin las opciones)    (Breve explicación de lo que hace el ejemplo)
+                    
+                    ejemplo de uso del comando con y sin las opciones
                 </code>
             </pre>
         </section>
