Añadido cambios de opciones y ejemplos de uso en grep.html by Angelo2

--- a/grep.html
+++ b/grep.html
@@ -43,7 +43,7 @@
                                                       independientemente de su caso. Por ejemplo, si el archivo contiene líneas con 
                                                       "Patrón", "patrón" o "PAtRóN", todas serán consideradas como coincidencias.
 
-                    -grep -l "palabra" *.txt           Busca la palabra "palabra" en todos los archivos de texto en el directorio actual (*.txt) y
+                    --grep -l "palabra" *.txt           Busca la palabra "palabra" en todos los archivos de texto en el directorio actual (*.txt) y
                                                       muestra solo los nombres de los archivos que contienen esa palabra,
                                                       sin mostrar las líneas específicas que coinciden.
 
